--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.3.3"
+    "moment": "^2.18.1",
+    "vue": "^2.3.3",
+    "vue-router": "^2.5.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
